--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newver",
   "displayName": "newver",
   "description": "Silly little script to tag and push a new version.",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "main": "dist/main.js",
   "type": "module",
   "files": [
@@ -37,12 +37,15 @@
     "lint": "eslint ./src/**/*"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "chalk": "^5.3.0",
+    "js-yaml": "^4.1.0",
     "sharp": "^0.33.3",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.30",
     "@types/shelljs": "^0.8.15",
     "@types/yargs": "^17.0.32",
