--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newver",
   "displayName": "newver",
   "description": "Silly little script to tag and push a new version.",
-  "version": "1.1.1",
+  "version": "1.0.0",
   "main": "dist/main.js",
   "type": "module",
   "files": [
@@ -34,7 +34,8 @@
   "scripts": {
     "build": "tsc --build --declaration",
     "build:clean": "node scripts/clean.js",
-    "lint": "eslint ./src/**/*"
+    "lint": "eslint ./src/**/*",
+    "test": "mocha"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
@@ -45,14 +46,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/chai": "^4.3.14",
+    "@types/fs-extra": "^11.0.4",
     "@types/js-yaml": "^4.0.9",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
     "@types/shelljs": "^0.8.15",
     "@types/yargs": "^17.0.32",
+    "chai": "^5.1.0",
     "eslint": "^8.57.0",
+    "fs-extra": "^11.2.0",
     "jest": "^29.7.0",
+    "mocha": "^10.4.0",
     "prettier": "^3.2.5",
     "shelljs": "^0.8.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0"
   }
