--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reiniiriarios/newver",
-  "description": "Silly little script to tag and push a new version.",
+  "description": "A silly little script to help quickly update a version in package files, then commit, tag, and push.",
   "version": "1.0.0",
   "main": "dist/main.js",
   "type": "module",
@@ -62,5 +62,14 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.7.0"
-  }
+  },
+  "keywords": [
+    "version",
+    "versioning",
+    "semver",
+    "git",
+    "commit",
+    "tags",
+    "workflow"
+  ]
 }
