--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,11 +22,14 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Lint
+        run: npm run lint
+
       - name: Build
         run: npm run build
 
-      - name: Lint
-        run: npm run lint
+      - name: Link
+        run: npm link
 
       - name: Test
         run: npm run test
